@@ -1,6 +1,10 @@
 New in v1.1.16 (????/??/??)
 ---------------------------
 
+Don't give up right away if we can't open a file. Try chmod'ing it even
+if we aren't root or don't own it, since that can sometimes work on AFS
+and NFS. Closes Savannah bug #21202. (Andrew Ferguson)
+
 Correctly handle updates to nested directories with unreadable permissions.
 Thanks to John Goerzen for the bug report. Closes Debian bugs #389134 and
 #411849. (Andrew Ferguson)
